[gd_scene load_steps=17 format=3 uid="uid://csny3if363son"]

[ext_resource type="Script" uid="uid://v8xbdobdntl0" path="res://paused_menu.gd" id="1_jypes"]
[ext_resource type="Texture2D" uid="uid://5q375qr4476d" path="res://Assets/wood1.png" id="2_rc272"]
[ext_resource type="Shader" uid="uid://dx71dpo0jac3j" path="res://Scenes/paused_menu.gdshader" id="2_w03cf"]
[ext_resource type="FontFile" uid="uid://c1852jjypyisc" path="res://Assets/The Centurion.otf" id="3_npcx0"]
[ext_resource type="Shader" uid="uid://4bsp6edg2ace" path="res://Assets/Shaders/pixelate.gdshader" id="4_dmf0p"]
[ext_resource type="AudioStream" uid="uid://c1gmd3qphxeq5" path="res://Assets/SFX/uiButton.wav" id="5_8mj5x"]
[ext_resource type="PackedScene" uid="uid://dfryx2u3dcwn7" path="res://Scenes/Menus/InGameTutorial/tutorial_contents.tscn" id="7_cf4x2"]
[ext_resource type="PackedScene" uid="uid://bbakdi2mbgbea" path="res://Scenes/Menus/InGameTutorial/tutorial_pg_1.tscn" id="8_lp358"]
[ext_resource type="PackedScene" uid="uid://bbuh680flkw4q" path="res://Scenes/Menus/InGameTutorial/tutorial_pg_2.tscn" id="9_yv6ar"]
[ext_resource type="PackedScene" uid="uid://q4xei754e8mk" path="res://Scenes/Menus/InGameTutorial/tutorial_pg_3.tscn" id="10_0eyed"]
[ext_resource type="PackedScene" uid="uid://ds1p6b7smb0tv" path="res://Scenes/Menus/InGameTutorial/tutorial_pg_4.tscn" id="11_py0k4"]
[ext_resource type="PackedScene" uid="uid://bi04sr84rc1vh" path="res://Scenes/Menus/InGameTutorial/tutorial_pg_5.tscn" id="12_0o8fn"]
[ext_resource type="PackedScene" uid="uid://ccesodxkkbes0" path="res://Scenes/Menus/InGameTutorial/tutorial_pg_6.tscn" id="13_yheyx"]
[ext_resource type="PackedScene" uid="uid://dwrrak36a5owc" path="res://Scenes/Menus/InGameTutorial/tutorial_pg_7.tscn" id="14_v2t44"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cetyb"]
shader = ExtResource("2_w03cf")
shader_parameter/amount = 3.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dmf0p"]
shader = ExtResource("4_dmf0p")
shader_parameter/amount = 170

[node name="PausedMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jypes")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_cetyb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0.266667, 0.266667, 0.705882)

[node name="Wood1" type="Sprite2D" parent="."]
show_behind_parent = true
z_index = 1
material = SubResource("ShaderMaterial_dmf0p")
position = Vector2(573, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_rc272")

[node name="buttonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8mj5x")

[node name="GridContainer" type="GridContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -193.0
offset_right = 74.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 10

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_npcx0")
theme_override_font_sizes/font_size = 40
text = "Paused"
horizontal_alignment = 1

[node name="Control" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Control3" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Control4" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_pressed_color = Color(0.988489, 0.656476, 7.70092e-07, 1)
theme_override_colors/icon_hover_color = Color(0.804422, 0.55664, 1.92523e-07, 1)
theme_override_fonts/font = ExtResource("3_npcx0")
theme_override_font_sizes/font_size = 30
text = "Resume Game"
flat = true

[node name="helpBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("3_npcx0")
theme_override_font_sizes/font_size = 30
text = "Help"
flat = true

[node name="Back2MainBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("3_npcx0")
theme_override_font_sizes/font_size = 30
text = "Main Menu
"
flat = true
expand_icon = true

[node name="QuitBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("3_npcx0")
theme_override_font_sizes/font_size = 30
text = "Quit"
flat = true

[node name="TutorialContents" parent="." instance=ExtResource("7_cf4x2")]
visible = false
layout_mode = 1

[node name="TutorialPg1" parent="." instance=ExtResource("8_lp358")]
visible = false
layout_mode = 1

[node name="TutorialPg2" parent="." instance=ExtResource("9_yv6ar")]
visible = false
layout_mode = 1

[node name="TutorialPg3" parent="." instance=ExtResource("10_0eyed")]
visible = false
layout_mode = 1

[node name="TutorialPg4" parent="." instance=ExtResource("11_py0k4")]
visible = false
layout_mode = 1

[node name="TutorialPg5" parent="." instance=ExtResource("12_0o8fn")]
visible = false
layout_mode = 1

[node name="TutorialPg6" parent="." instance=ExtResource("13_yheyx")]
visible = false
layout_mode = 1

[node name="TutorialPg7" parent="." instance=ExtResource("14_v2t44")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="GridContainer/ResumeBtn" to="." method="_on_resume_btn_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/ResumeBtn" to="." method="_on_resume_btn_mouse_exited"]
[connection signal="pressed" from="GridContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="mouse_entered" from="GridContainer/helpBtn" to="." method="_on_help_btn_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/helpBtn" to="." method="_on_help_btn_mouse_exited"]
[connection signal="pressed" from="GridContainer/helpBtn" to="." method="_on_help_btn_pressed"]
[connection signal="mouse_entered" from="GridContainer/Back2MainBtn" to="." method="_on_back_2_main_btn_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Back2MainBtn" to="." method="_on_back_2_main_btn_mouse_exited"]
[connection signal="pressed" from="GridContainer/Back2MainBtn" to="." method="_on_back_2_main_btn_pressed"]
[connection signal="mouse_entered" from="GridContainer/QuitBtn" to="." method="_on_quit_btn_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/QuitBtn" to="." method="_on_quit_btn_mouse_exited"]
[connection signal="pressed" from="GridContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
